--- a/about.html
+++ b/about.html
@@ -164,49 +164,49 @@
     <!-- About End -->
 
 
-    <!-- Feature Start -->
+        <!-- Feature Start -->
     <div class="container-fluid bg-primary feature pt-5">
         <div class="container pt-5">
             <div class="row g-5">
                 <div class="col-lg-6 align-self-center mb-md-5 pb-md-5 wow fadeIn" data-wow-delay="0.3s">
                     <div class="btn btn-sm border rounded-pill text-white px-3 mb-3">Why Choose Us</div>
                     <h1 class="text-white mb-4">We're Best in Industry with Years of Experience</h1>
-                    <p class="text-light mb-4">We pride ourselves on being industry leaders, delivering top-notch IT solutions 
-                        with a commitment to innovation, quality, and client satisfaction.</p>
+                    <p class="text-light mb-4">We pride ourselves on being industry leaders, delivering top-notch IT solutions with a 
+                        commitment to innovation, quality, and client satisfaction.</p>
                     <div class="d-flex align-items-center text-white mb-3">
                         <div class="btn-sm-square bg-white text-primary rounded-circle me-3">
                             <i class="fa fa-check"></i>
                         </div>
-                        <span>Diam dolor diam ipsum et tempor sit</span>
+                        <span>With Customer satifaction for the support</span>
                     </div>
                     <div class="d-flex align-items-center text-white mb-3">
                         <div class="btn-sm-square bg-white text-primary rounded-circle me-3">
                             <i class="fa fa-check"></i>
                         </div>
-                        <span>Diam dolor diam ipsum et tempor sit</span>
+                        <span>Comfortable Employees working for long time </span>
                     </div>
                     <div class="d-flex align-items-center text-white mb-3">
                         <div class="btn-sm-square bg-white text-primary rounded-circle me-3">
                             <i class="fa fa-check"></i>
                         </div>
-                        <span>Diam dolor diam ipsum et tempor sit</span>
+                        <span>With updated solutions for your tech issues</span>
                     </div>
                     <div class="row g-4 pt-3">
                         <div class="col-sm-6">
                             <div class="d-flex rounded p-3" style="background: rgba(256, 256, 256, 0.1);">
-                                <i class="fa fa-home fa-3x text-white"></i>
+                                <i class="fa fa-users fa-3x text-white"></i>
                                 <div class="ms-3">
-                                    <h2 class="text-white mb-0" data-toggle="counter-up">9999</h2>
+                                    <h2 class="text-white mb-0" data-toggle="counter-up">854</h2>
                                     <p class="text-white mb-0">Happy Clients</p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="d-flex rounded p-3" style="background: rgba(256, 256, 256, 0.1);">
-                                <i class="fa fa-home fa-3x text-white"></i>
+                                <i class="fa fa-check fa-3x text-white"></i>
                                 <div class="ms-3">
-                                    <h2 class="text-white mb-0" data-toggle="counter-up">9999</h2>
-                                    <p class="text-white mb-0">Projects Complete</p>
+                                    <h2 class="text-white mb-0" data-toggle="counter-up">868</h2>
+                                    <p class="text-white mb-0">Project Complete</p>
                                 </div>
                             </div>
                         </div>
