--- a/project.html
+++ b/project.html
@@ -138,7 +138,7 @@
                         <img class="img-fluid" src="img/project-1.jpg" alt="">
                         <a class="case-overlay text-decoration-none" href="">
                             <small>Robotic Automation</small>
-                            <h5 class="lh-base text-white mb-3">Lorem elitr magna stet eirmod labore amet labore clita
+                            <h5 class="lh-base text-white mb-3">Discover how robotic automation revolutionized our client's manufacturing processes, enhancing efficiency and reducing operational costs.
                             </h5>
                             <span class="btn btn-square btn-primary"><i class="fa fa-arrow-right"></i></span>
                         </a>
@@ -148,8 +148,8 @@
                     <div class="case-item position-relative overflow-hidden rounded mb-2">
                         <img class="img-fluid" src="img/project-2.jpg" alt="">
                         <a class="case-overlay text-decoration-none" href="">
-                            <small>Machine learning</small>
-                            <h5 class="lh-base text-white mb-3">Lorem elitr magna stet eirmod labore amet labore clita
+                            <small>Machine Learning</small>
+                            <h5 class="lh-base text-white mb-3">Explore our Machine Learning case study to see how data-driven algorithms transformed customer experience and boosted predictive accuracy.
                             </h5>
                             <span class="btn btn-square btn-primary"><i class="fa fa-arrow-right"></i></span>
                         </a>
@@ -160,7 +160,7 @@
                         <img class="img-fluid" src="img/project-3.jpg" alt="">
                         <a class="case-overlay text-decoration-none" href="">
                             <small>Predictive Analysis</small>
-                            <h5 class="lh-base text-white mb-3">Lorem elitr magna stet eirmod labore amet labore clita
+                            <h5 class="lh-base text-white mb-3">Learn how our Productive Analysis case study helped businesses optimize workflows and enhance productivity with data-driven insights.
                             </h5>
                             <span class="btn btn-square btn-primary"><i class="fa fa-arrow-right"></i></span>
                         </a>
@@ -170,7 +170,6 @@
         </div>
     </div>
     <!-- Case End -->
-
 
     <!-- FAQs Start -->
     <div class="container-fluid py-5">
