--- a/about.html
+++ b/about.html
@@ -221,17 +221,22 @@
     <!-- Feature End -->
 
 
-    <!-- Team Start -->
+     <!-- Team Start -->
     <div class="container-fluid bg-light py-5">
         <div class="container py-5">
             <div class="row g-5 align-items-center">
                 <div class="col-lg-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="btn btn-sm border rounded-pill text-primary px-3 mb-3">Our Team</div>
                     <h1 class="mb-4">Meet Our Experienced Team Members</h1>
-                    <p class="mb-4">Meet our experienced team of industry experts, dedicated to 
-                        delivering exceptional IT solutions that drive results. With diverse skills and 
-                        a passion for innovation, our team is committed to understanding and addressing your unique business needs.
-                         Together, we bring knowledge, creativity, and precision to every project, ensuring success at every step.
+                    <p class="mb-4">Meet our experienced team of industry experts, dedicated to delivering exceptional IT solutions that drive results. 
+                        With diverse skills and a passion for innovation, our team is committed to understanding and addressing your unique business needs. 
+                        Together, we bring knowledge, creativity, and precision to every project, ensuring success at every step.
+
+
+
+
+
+
                     </p>
                     <a class="btn btn-primary rounded-pill px-4" href="">Read More</a>
                 </div>
