--- a/team.html
+++ b/team.html
@@ -132,9 +132,16 @@
                 <div class="col-lg-5 wow fadeIn" data-wow-delay="0.1s">
                     <div class="btn btn-sm border rounded-pill text-primary px-3 mb-3">Our Team</div>
                     <h1 class="mb-4">Meet Our Experienced Team Members</h1>
-                    <p class="mb-4">Tempor erat elitr rebum at clita. Diam dolor diam ipsum et tempor sit. Aliqu diam
-                        amet diam et eos labore. Clita erat ipsum et lorem et sit, sed stet no labore lorem sit. Sanctus
-                        clita duo justo et tempor eirmod magna dolore erat amet</p>
+                    <p class="mb-4">Meet our experienced team of industry experts, dedicated to delivering exceptional IT solutions that drive results. 
+                        With diverse skills and a passion for innovation, our team is committed to understanding and addressing your unique business needs. 
+                        Together, we bring knowledge, creativity, and precision to every project, ensuring success at every step.
+
+
+
+
+
+
+                    </p>
                     <a class="btn btn-primary rounded-pill px-4" href="">Read More</a>
                 </div>
                 <div class="col-lg-7">
@@ -145,7 +152,7 @@
                                     <div class="team-item bg-white text-center rounded p-4 pt-0">
                                         <img class="img-fluid rounded-circle p-4" src="img/team-1.jpg" alt="">
                                         <h5 class="mb-0">Boris Johnson</h5>
-                                        <small>Founder & CEO</small>
+                                        <small>SAP Global Practice Head</small>
                                         <div class="d-flex justify-content-center mt-3">
                                             <a class="btn btn-square btn-primary m-1" href=""><i
                                                     class="fab fa-facebook-f"></i></a>
@@ -183,7 +190,7 @@
                                     <div class="team-item bg-white text-center rounded p-4 pt-0">
                                         <img class="img-fluid rounded-circle p-4" src="img/team-3.jpg" alt="">
                                         <h5 class="mb-0">Kate Winslet</h5>
-                                        <small>Co Founder</small>
+                                        <small>Product Manager</small>
                                         <div class="d-flex justify-content-center mt-3">
                                             <a class="btn btn-square btn-primary m-1" href=""><i
                                                     class="fab fa-facebook-f"></i></a>
@@ -200,7 +207,7 @@
                                     <div class="team-item bg-white text-center rounded p-4 pt-0">
                                         <img class="img-fluid rounded-circle p-4" src="img/team-4.jpg" alt="">
                                         <h5 class="mb-0">Cody Gardner</h5>
-                                        <small>Project Manager</small>
+                                        <small>Global Project Manager</small>
                                         <div class="d-flex justify-content-center mt-3">
                                             <a class="btn btn-square btn-primary m-1" href=""><i
                                                     class="fab fa-facebook-f"></i></a>
