--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
                 </div>
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.3s">
                     <h5 class="text-white mb-4">Get In Touch</h5>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>FLAT 302, PJR ARCADE, PLOT NO 129, Kukatpally, Hyderabad, Telangana 500072</p>
+                    <p><i class="fa fa-map-marker-alt me-3"></i>Door No 1-60/8/A&B, 3rd floor, KNR Square, Opp.The platina, Gachibowli, Hyderabad -500032</p>
                     <p><i class="fa fa-phone-alt me-3"></i>+91 8520944280</p>
                     <p><i class="fa fa-envelope me-3"></i>info@mviabletech.com</p>
                     <div class="d-flex pt-2">
@@ -747,3 +747,4 @@
 </body>
 
 </html>
+
