--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <div class="col-lg-6 align-self-center text-center text-lg-start mb-lg-5">
                     <div class="btn btn-sm border rounded-pill text-white px-3 mb-3 animated slideInRight">AI.Tech</div>
                     <h1 class="display-4 text-white mb-4 animated slideInRight">Intelligent solutions for Your Business</h1>
-                    <p class="text-white mb-4 animated slideInRight">We help you find the best solution for your Business woth our vast expertise </p>
+                    <p class="text-white mb-4 animated slideInRight">We help you find the best solution for your Business worth our vast expertise </p>
                     <a href="" class="btn btn-light py-sm-3 px-sm-5 rounded-pill me-3 animated slideInRight">Read More</a>
                     <a href="" class="btn btn-outline-light py-sm-3 px-sm-5 rounded-pill animated slideInRight">Contact Us</a>
                 </div>
@@ -678,7 +678,7 @@
                     <h5 class="text-white mb-4">Get In Touch</h5>
                     <p><i class="fa fa-map-marker-alt me-3"></i>Door No 1-60/8/A&B, 3rd floor, KNR Square, Opp.The platina, Gachibowli, Hyderabad -500032</p>
                     <p><i class="fa fa-phone-alt me-3"></i>+91 8520944280</p>
-                    <p><i class="fa fa-envelope me-3"></i>info@mviabletech.com</p>
+                    <p><i class="fa fa-envelope me-3"></i>hr@mviabletechnologies.cfom</p>
                     <div class="d-flex pt-2">
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-facebook-f"></i></a>
@@ -747,4 +747,5 @@
 </body>
 
 </html>
+
 
