--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@
             <div class="row g-5">
                 <div class="col-md-6 col-lg-3 wow fadeIn" data-wow-delay="0.1s">
                     <a href="index.html" class="d-inline-block mb-3">
-                        <h1 class="text-white">MVIABLE<span class="text-primary">.</span>T</h1>
+                        <h1 class="text-white">MVIABLE<span class="text-primary">.</span>Technologies</h1>
                     </a>
                     <p class="mb-0">We're your trusted partner in digital transformation. Our 
                         expertise in SAP, PeopleSoft, DevOps, and Azure, combined with AI and automation, 
@@ -709,7 +709,7 @@
             <div class="copyright">
                 <div class="row">
                     <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                        &copy; <a class="border-bottom" href="#">mviabletech.com</a>, All Right Reserved.
+                        &copy; <a class="border-bottom" href="#">mviabletechnologies.com</a>, All Right Reserved.
 
                         <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
                        
@@ -747,5 +747,6 @@
 </body>
 
 </html>
+
 
 
